--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ujjaval Desai | Software Developer</title>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158179574-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-158179574-1');
+  </script>
   </head>
   <body>
     <div id="root"></div>
