Added logo for website

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <meta property="article:publisher" content="ujjavaldesai.netlify.com" />
   <meta property="og:image" content="" />
 
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
   <!--
     manifest.json provides metadata used when your web app is installed on a
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
