Added the meta-tags info of open graph

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#ffffff" />
   <meta
           name="ujjavaldesai"
           content="portfolio"
   />
 
   <title>Ujjaval Desai | Software Developer</title>
+  <meta name="robots" content="index, follow" />
+  <meta name="description" content="Welcome to Ujjaval Desai portfolio."/>
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
@@ -22,8 +24,7 @@
   />
   <meta
           property="og:description"
-          content="I love coding, designing and tackling complex bugs
-          in the application."
+          content="Welcome to Ujjaval Desai portfolio."
   />
   <meta property="og:url" content="ujjavaldesai.netlify.com" />
   <meta
@@ -31,7 +32,7 @@
           content="Ujjaval Desai | Software Developer"
   />
   <meta property="article:publisher" content="ujjavaldesai.netlify.com" />
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="logo.jpg" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
   <!--
