--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
           content="Ujjaval Desai | Software Developer"
   />
   <meta property="article:publisher" content="ujjavaldesai.netlify.com" />
-  <meta property="og:image" content="logo.jpg" />
+  <meta property="og:image:secure_url" content="https://media1.thehungryjpeg.com/thumbs2/ori_3630284_f3tkxby6vcx40uaksnfydnbvo6fbsahf5jxh8oba_ud-monogram-logo-design.jpg" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
   <!--
