--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
           name="ujjavaldesai"
           content="portfolio"
   />
+  <meta name="google-site-verification" content="3_pd5x8I83DernhgTR5IXus3AkxDYNDBUdqz4VFAKzs" />
 
   <title>Ujjaval Desai | Software Developer</title>
   <meta name="robots" content="index, follow" />
