--- a/public/index.html
+++ b/public/index.html
@@ -7,31 +7,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <meta name="theme-color" content="#ffffff" />
-  <meta
-          name="ujjavaldesai"
-          content="portfolio"
-  />
   <meta name="google-site-verification" content="3_pd5x8I83DernhgTR5IXus3AkxDYNDBUdqz4VFAKzs" />
+  <meta name="google-site-verification" content="7zNi_7Oyk-VUxS2H3ohACHozBSCSxKjXF6jIyLq1mqM" />
 
   <title>Ujjaval Desai | Software Developer</title>
   <meta name="robots" content="index, follow" />
-  <meta name="description" content="Welcome to Ujjaval Desai portfolio."/>
+  <meta name="description" content="I love coding and learning new things in the software world."/>
+  <meta name="keywords" content="Ujjaval,Desai,Ujjaval Desai,Ujjaval Desai Software Developer,Ujjaval Desai Portfolio">
+
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta
-          property="og:title"
-          content="Ujjaval Desai | Software Developer"
-  />
-  <meta
-          property="og:description"
-          content="Welcome to Ujjaval Desai portfolio."
-  />
-  <meta property="og:url" content="ujjavaldesai.netlify.com" />
-  <meta
-          property="og:site_name"
-          content="Ujjaval Desai | Software Developer"
-  />
+  <meta property="og:title" content="Ujjaval Desai | Software Developer"/>
+  <meta property="og:description" content="I love coding and learning new things in the software world."/>
+  <meta property="og:url" content="https://ujjavaldesai.netlify.com" />
+  <meta property="og:site_name" content="Ujjaval Desai | Software Developer"/>
   <meta property="article:publisher" content="ujjavaldesai.netlify.com" />
   <meta property="og:image:secure_url" content="https://media1.thehungryjpeg.com/thumbs2/ori_3630284_f3tkxby6vcx40uaksnfydnbvo6fbsahf5jxh8oba_ud-monogram-logo-design.jpg" />
 
