--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <title>Ujjaval Desai | Software Developer</title>
   <meta name="robots" content="index, follow" />
   <meta name="description" content="I love coding and learning new things in the software world."/>
-  <meta name="keywords" content="Ujjaval,Desai,Ujjaval Desai,Ujjaval Desai Software Developer,Ujjaval Desai Portfolio">
+  <meta name="keywords" content="Ujjaval,Desai,Ujjaval Desai,Ujjaval Desai Software Developer,Ujjaval Desai Portfolio, Ujjaval Desai Developer">
 
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
